syntax = "proto3";
option go_package = ".;proto";

import "google/protobuf/timestamp.proto";


service Hello {
  rpc Hello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
  google.protobuf.Timestamp add_time = 2;
}

message HelloResponse {
  string message = 1;
}
